# agentic-sdlc-demo-app

./: .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  agentic-sdlc-demo-app.pyproj  agentic-sdlc-demo-app.sln  compose.yaml  pyproject.toml
.agentic/: project.json
.github/ISSUE_TEMPLATE/: agentic-change.yml
.github/workflows/: ci.yml  developer-agent.yml  unified-release.yml
ops/: deploy.py
src/demo_app/: app.py  server.py
tests/: test_app.py
